Fix overflow issue

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -466,12 +466,12 @@ sidebar {
 
 		.error {
 			background: rgba($secondary-dark, 0.5);
-			display: inline-block;
+			display: inline;
 		}
 
 		.warning {
 			background: rgba($accent, 0.5);
-			display: inline-block;
+			display: inline;
 		}
 
 		.clause {
